Fix overflow in label.

--- a/src/components/task/TaskItem.module.css
+++ b/src/components/task/TaskItem.module.css
@@ -78,6 +78,7 @@ input:checked:focus + i, input:checked:hover + i {
     width: 100%;
     margin-left: 0.5rem;
     overflow: hidden;
+    padding: .2rem 0;
 }
 
 .todoDeleted label {
